scrollbar fix

--- a/styles/People/People.module.scss
+++ b/styles/People/People.module.scss
@@ -285,6 +285,10 @@
     }
 }
 
+.teamPopUp::-webkit-scrollbar {
+    width: 0;
+}
+
 .teamHeader {
     display: flex;
 }
